# wroclaw-macro-finder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: macros.csv  main_database.db  sources.csv
src/: main.py
src/app/: __init__.py  api.py  api_pdfs.py  api_pdfs_progattempt.py  db.py  ingest.py  models.py  schemas.py  search.py
