[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wroclaw-macro-finder"
version = "0.1.0"
description = "Search restaurant nutrition data around Wrocław (CLI, FastAPI, SQLite)."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pre-commit", "pytest"]

[tool.ruff]
target-version = "py311"
line-length = 88  # or 100 — your choice; default Black-like is 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # start minimal; add rules as you learn them (E/F = pycodestyle/pyflakes-ish, I = isort)

[tool.ruff.lint.per-file-ignores]
"src/app/api_pdfs.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false   # tighten later if you want
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

explicit_package_bases = true
mypy_path = "src"

files = ["src"]

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true